# Openbb-Agent-UI

./: .gitignore  DEV_LOG.md  Dockerfile  ENHANCEMENT_PLAN.md  GIT_COMMIT_GUIDE.md  README.md  configure.py  docker-compose.yml  ngrok.yml  pyproject.toml  requirements-ml.txt  requirements.txt  start-ngrok.bat  start.bat  start.sh  test_pdf.py  test_week2_processors.py
comprehensive_agent/: __init__.py  config.py  main.py  prompts.py
comprehensive_agent/core/: data_science_agent.py  model_engine.py
comprehensive_agent/processors/: __init__.py  api_data.py  api_data_processor.py  citations.py  data_validator.py  error_handler.py  feature_engineering.py  financial_web_search.py  pdf.py  spreadsheet.py  spreadsheet_processor.py  web_search.py  widgets.py
comprehensive_agent/tests/: __init__.py  test_agent.py  test_financial_web_search.py
comprehensive_agent/tools/: __init__.py  openbb_tools.py
comprehensive_agent/utils/: alerting.py  data_correlator.py
comprehensive_agent/visualizations/: __init__.py  charts.py  financial_charts.py  interactive_charts.py  tables.py
static/: index.html  script.js  style.css
