[tool.poetry]
name = "comprehensive-openbb-agent"
version = "1.0.0"
description = "Comprehensive OpenBB Agent with all features and Ollama integration"
authors = ["OpenBB Agent Developer <dev@openbb.finance>"]
readme = "README.md"
packages = [{include = "comprehensive_agent"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.27.0"
httpx = "^0.27.0"
sse-starlette = "^2.1.2"
pdfplumber = "^0.11.5"
pandas = "^2.2.0"
openpyxl = "^3.1.2"
openbb-ai = "^1.5.0"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"
duckduckgo-search = "^6.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
pytest-asyncio = "^0.23.8"
ruff = "^0.8.0"
mypy = "^1.15.0"

[tool.poetry.scripts]
comprehensive-agent = "comprehensive_agent.main:main"
comprehensive-agent-dev = "uvicorn:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "S", "B", "A", "COM", "DTZ", "EM", "G", "PIE", "T20", "SIM", "ARG", "PTH", "ERA", "PL", "RUF"]
ignore = ["ANN101", "ANN102", "COM812", "S101"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"